tests/integration/commands/iteration/snapshots/integration__commands__iteration__when_graphing__it_renders_a_blocked_task_with_blocked_and_blocking_indicators.snap
---
source: tests/integration/commands/iteration/when_graphing.rs
assertion_line: 64
expression: out
---

  Sprint
  2 phases · 2 tasks

  ◆  Phase 1  ──
  ○  [ID]  blocker task                         ○ open  ! blocking
  │
  ◆  Phase 2  ──
  ⊗  [ID]  blocked task                         ⊗ blocked  blocked-by [ID]
