tests/integration/commands/iteration/snapshots/integration__commands__iteration__when_graphing__it_renders_a_single_task_phase_without_branches.snap
---
source: tests/integration/commands/iteration/when_graphing.rs
assertion_line: 74
expression: out
---

  Sprint
  1 phase · 1 task

  ◆  Phase 1  ──
  ○  [ID]  solo task                            ○ open
