tests/integration/commands/iteration/snapshots/integration__commands__iteration__when_graphing__it_renders_branch_connectors_for_multi_task_phases.snap
---
source: tests/integration/commands/iteration/when_graphing.rs
assertion_line: 84
expression: out
---

  Sprint
  1 phase · 3 tasks

  ◆  Phase 1  ──
  ├─╮─╮
  ○ │ │  [ID]  first task                           ○ open
  │ ○ │  [ID]  second task                          ○ open
  │ │ ○  [ID]  third task                           ○ open
  ╰─╯─╯
