tests/integration/commands/iteration/snapshots/integration__commands__iteration__when_graphing__it_renders_continuation_lines_between_phases.snap
---
source: tests/integration/commands/iteration/when_graphing.rs
assertion_line: 95
expression: out
---

  Sprint
  3 phases · 3 tasks

  ◆  Phase 1  ──
  ○  [ID]  phase one task                       ○ open
  │
  ◆  Phase 2  ──
  ○  [ID]  phase two task                       ○ open
  │
  ◆  Phase 3  ──
  ○  [ID]  phase three task                     ○ open
