tests/integration/commands/iteration/snapshots/integration__commands__iteration__when_graphing__it_renders_phase_header_and_summary_line.snap
---
source: tests/integration/commands/iteration/when_graphing.rs
assertion_line: 105
expression: out
---

  Sprint
  1 phase · 1 task

  ◆  Phase 1  ──
  ○  [ID]  a task                               ○ open
