tests/integration/commands/iteration/snapshots/integration__commands__iteration__when_graphing__it_renders_priority_badge_when_task_has_priority.snap
---
source: tests/integration/commands/iteration/when_graphing.rs
assertion_line: 124
expression: out
---

  Sprint
  1 phase · 1 task

  ◆  Phase 1  ──
  ○  [ID]  [P1]  priority task                        ○ open
