tests/integration/commands/iteration/snapshots/integration__commands__iteration__when_graphing__it_renders_without_priority_column_when_absent.snap
---
source: tests/integration/commands/iteration/when_graphing.rs
assertion_line: 134
expression: out
---

  Sprint
  1 phase · 1 task

  ◆  Phase 1  ──
  ○  [ID]  no priority                          ○ open
